--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ textarea {
   overflow: none;
   resize: none;
   width: 100%;
-  height: 1.2em;
+  /*height: 1.2em;*/
   line-height: 1.5;
 }
 
@@ -81,6 +81,7 @@ textarea:focus {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: #888;
+  text-align: center;
 }
 
 .t-stylish {
