--- a/public/css/an.css
+++ b/public/css/an.css
@@ -135,8 +135,12 @@
 
 .timer {
 	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
+	-o-animation-delay: 0.5s;
 }
 
 .t-sub {
 	-webkit-animation-delay: 0.8s;
+	-moz-animation-delay: 0.8s;
+	-o-animation-delay: 0.8s;
 }
