--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 
 html, body {
   height: 100%;
+  overflow: hidden;
 }
 
 html {
@@ -36,6 +37,12 @@ img.logo {
   width: 500px;
   display: block;
   margin: 0 auto 30px auto;
+}
+
+img.slideLogo {
+  width: 80%;
+  display: block;
+  margin: 0 auto;
 }
 
 textarea {
@@ -157,4 +164,35 @@ div.hr {
 
 .register-button:hover{
   background: #e92825;
+}
+
+.red {
+  color: #eb3f3c;
+}
+
+.slides {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.slide-head {
+  height: 40%;
+  color: #000;
+  text-align: center;
+}
+
+.slash {
+  color: #eb3f3c;
+}
+
+.slide-head h1, .slide-body h1 {
+  font-size: 48px;
+}
+
+.slide-body {
+  height: 60%;
+  padding: 50px;
+  background-color:  #eb3f3c;
+  color: #fff;
 }
