--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body {
 
 html {
   background: #f7f7f7;
-  background-image: url(../images/bg.jpg);
+  background-image: url("http://subtlepatterns.com/patterns/cubes.png");
   color: #222;
 }
 
